# Memorix

./: .gitignore  README.md  docker-compose.yml  启动项目.command
.github/workflows/: desktop-build.yml
desktop/: README.md  package-lock.json  package.json
desktop/scripts/: prepare-bundle.mjs
desktop/shell/: index.html
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: lib.rs  main.rs
doc/: 1.1数据库详细设计说明书 V0.1.docx  1.AI产业研究知识资产引擎开发文档.docx  2：基础系统与资料导入详细设计 V0.1.docx  3：文档解析、清洗与 AI 摘要详细设计 .docx  4：检索与问答详细设计 V0.1.docx  5：报告与导出详细设计 V0.1.docx  6：Agent API 与内测详细设计 V0.1.docx  Memorix_IIS站点建立与生产部署操作手册_V1.1.md  Memorix_WindowsServer_IIS_云端部署与开发实施方案_V1.0.md  Memorix_云端页面与权限隔离改造开发文档_V1.0.md  Memorix_本地云端身份同步与插件体系设计.md  前端实现扫描与补齐规划开发文档.md  双模式知识引擎完整开发文档.md  多语言资料库自适应处理与中文索引开发文档.md  多语言资料库自适应处理与中文索引开发规划.md  路线1本地优先改造方案.md  阶段一-双模式底座改造详细设计.md  阶段七_MCP与Agent接入内测_详细开发文档.md  阶段三_文档解析清洗与AI摘要_详细开发文档.md  阶段二_资料导入与Inbox_详细开发文档.md  阶段五_混合检索与RAG问答_详细开发文档.md  阶段六_报告与导出_详细开发文档.md  阶段四_标签实体分块与向量化_详细开发文档.md
docs/: Memorix与ima及Obsidian竞品对比分析.md  topic-summary-template-design.md
mobile/: README.md  app.json  package-lock.json  package.json  tsconfig.json
mobile/src/: App.tsx  config.ts
research-memory-engine/: README.md  package-lock.json  package.json  preview.html  tailwind.config.ts
research-memory-engine/app/: page.tsx  (+2 more)
scripts/: README.md  desktop-dev-services.sh  desktop-prepare-bundle.sh  smoke-api.mjs
src/: KnowledgeEngine.slnx
web/: package-lock.json  package.json
(+399 files in other folders)
