[package]
name = "memorix-desktop"
version = "0.1.0"
description = "Memorix desktop shell"
authors = ["Memorix"]
edition = "2021"

[lib]
name = "memorix_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "memorix-desktop"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
